@@ -1,11 +1,11 @@
 package no.nav.tps.forvalteren.service.command.testdata;
 
-import static org.assertj.core.util.Lists.newArrayList;
 import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.hasItems;
 import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
 import static org.junit.Assert.assertThat;
-import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
@@ -24,7 +24,6 @@ import no.nav.tps.forvalteren.domain.jpa.Gruppe;
 import no.nav.tps.forvalteren.domain.jpa.Person;
 import no.nav.tps.forvalteren.domain.test.provider.GruppeProvider;
 import no.nav.tps.forvalteren.domain.test.provider.PersonProvider;
-import no.nav.tps.forvalteren.repository.jpa.PersonRepository;
 
 @RunWith(MockitoJUnitRunner.class)
 public class FindPersonsNotInEnvironmentsTest {
@@ -33,13 +32,8 @@ public class FindPersonsNotInEnvironmentsTest {
     private FindPersonsNotInEnvironments findPersonsNotInEnvironments;
 
     @Mock
-    private FindGruppeById findGruppeById;
-
-    @Mock
     private FiltrerPaaIdenterTilgjengeligIMiljo filtrerPaaIdenterTilgjengeligIMiljo;
 
-    @Mock
-    private PersonRepository personRepository;
 
     private final Long GRUPPE_ID = 1337L;
     private Gruppe gruppe = GruppeProvider.aGruppe().id(GRUPPE_ID).build();
@@ -54,12 +48,7 @@ public class FindPersonsNotInEnvironmentsTest {
 
     @Test
     public void findNoPersonsInEnvironment() {
-        Set<String> identerSomIkkeFinnesiTPSiMiljoe = new HashSet<>();
-        identerSomIkkeFinnesiTPSiMiljoe.add(person.getIdent());
-        identerSomIkkeFinnesiTPSiMiljoe.add(person2.getIdent());
-
-        when(filtrerPaaIdenterTilgjengeligIMiljo.filtrer(anySet(), anySet())).thenReturn(identerSomIkkeFinnesiTPSiMiljoe);
-        when(personRepository.findByIdentIn(anySet())).thenReturn(newArrayList(person, person2));
+        when(filtrerPaaIdenterTilgjengeligIMiljo.filtrer(anyList(), eq(environments))).thenReturn(Set.of(person.getIdent(), person2.getIdent()));
 
         List<Person> result = findPersonsNotInEnvironments.execute(Arrays.asList(person, person2), environments);
 
@@ -77,12 +66,10 @@ public class FindPersonsNotInEnvironmentsTest {
 
     @Test
     public void onePersonIsNotInEnvironment() {
-        Set<String> identerSomIkkeFinnesiTPSiMiljoe = new HashSet<>();
-        identerSomIkkeFinnesiTPSiMiljoe.add(person.getIdent());
-        when(filtrerPaaIdenterTilgjengeligIMiljo.filtrer(anySet(), anySet())).thenReturn(identerSomIkkeFinnesiTPSiMiljoe);
-        when(personRepository.findByIdentIn(anySet())).thenReturn(newArrayList(person));
 
-        List<Person> result = findPersonsNotInEnvironments.execute(Arrays.asList(person, person2), environments);
+        when(filtrerPaaIdenterTilgjengeligIMiljo.filtrer(anyList(), eq(environments))).thenReturn(Set.of(person.getIdent()));
+
+        List<Person> result = findPersonsNotInEnvironments.execute(List.of(person, person2), environments);
         assertThat(result, hasSize(1));
         assertThat(result, hasItem(person));
     }
